Agentforce Hackathon Source Code/force-app/main/default/objects/Twilio_Settings__mdt/Twilio_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Stores Twilio API credentials securely as Custom Metadata instead of hardcoded class constants.</description>
    <label>Twilio Settings</label>
    <pluralLabel>Twilio Settings</pluralLabel>
</CustomObject>