Agentforce Hackathon Source Code/force-app/main/default/objects/Twilio_Settings__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <description>Twilio Account SID used for API authentication.</description>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>