Agentforce Hackathon Source Code/force-app/main/default/objects/Twilio_Settings__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>Twilio Auth Token used for API authentication. Treat as a secret.</description>
    <label>Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>