Agentforce Hackathon Source Code/force-app/main/default/objects/Twilio_Settings__mdt/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <description>Twilio WhatsApp sender number in E.164 format, prefixed with whatsapp: (e.g. whatsapp:+14155238886).</description>
    <label>From Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>